# suyu

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  build_mac_debug.sh  build_mac_release.sh  run.sh  temp.sh  vcpkg.json
.forgejo/workflows/: ci.yml  codespell.yml  verify.yml
.gitea/ISSUE_TEMPLATE/: bug_report.yml
.github/: FUNDING.yml
.reuse/: dep5
CMakeModules/: CopyYuzuQt5Deps.cmake
src/: CMakeLists.txt
src/android/: gradlew
src/common/: CMakeLists.txt  intrusive_red_black_tree.h  settings.cpp  settings.h  telemetry.h  thread_worker.h
src/core/: CMakeLists.txt  core.cpp  core.h  memory.cpp  memory.h  reporter.cpp  telemetry_session.cpp
src/input_common/: input_poller.cpp
src/shader_recompiler/: runtime_info.h
src/suyu/: CMakeLists.txt  about_dialog.cpp  bootmanager.cpp  bootmanager.h  breakpad.cpp  compatdb.cpp  discord_impl.cpp  game_list.cpp  game_list.h  game_list_worker.cpp  loading_screen.cpp  main.cpp  main.h  main.ui  startup_checks.cpp  uisettings.cpp  uisettings.h  vk_device_info.cpp
src/suyu_cmd/: CMakeLists.txt  data_analyst_null.cpp  suyu.cpp
src/tests/: CMakeLists.txt
src/video_core/: CMakeLists.txt  cdma_pusher.cpp  dma_pusher.cpp  gpu.cpp  gpu.h  memory_manager.cpp  rasterizer_interface.h  shader_environment.cpp  shader_environment.h  surface.cpp  video_core.cpp
src/web_service/: CMakeLists.txt  telemetry_json.h
src/yuzu/: CMakeLists.txt  Info.plist  about_dialog.cpp  aboutdialog.ui  bootmanager.cpp  breakpad.cpp  game_list.cpp  game_list.h  (+9 more)
tools/: addbpt.py  dbghook_log_bp.py  dbghook_remove_bp.py
(+388 files in other folders)
